# CMakeRunPlatformInvoke

./: .gitignore  README.md
samples/: CMakeLists.txt
samples/NativeLib/: CMakeLists.txt  NativeLib.cpp  NativeLib.h
samples/dll/: NativeLib.cpp  NativeLib.h
samples/sources/: DllImportAttributeSample.cs  HandleException.cs  HelloWorldWithCustomedFunction.cs  HelloWorldWithStandardCRuntime.cs  HelloWorldWithWin32.cs  MarhsalBlittableReference.cs  MarshalCharArray.cs  MarshalClass.cs  MarshalString.cs  MarshalStruct.cs  MarshalWithDirectionProperty.cs  ReleaseUnmanagedMemory.cs
